Added pad setting button and play button. Pad setting has same functionality as the top right square button with pad numbers

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,10 +9,13 @@
     tools:context=".ui.main.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+
     <FrameLayout
         android:id="@+id/screen_area"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+    </FrameLayout>
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
