--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,8 +8,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="HOME FRAGMENT" />
+        android:layout_height="match_parent" />
 
     <RelativeLayout
         android:id="@+id/main_screen_area"
@@ -21,6 +20,8 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_above="@id/pad_settings"
+            android:background="@drawable/home_play_color"
+            android:textColor="@color/colorButtonText"
             android:layout_centerHorizontal="true"
             android:text="Play" />
 
@@ -29,6 +30,8 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:background="@drawable/home_play_color"
+            android:textColor="@color/colorButtonText"
             android:layout_marginTop="25dp"
             android:layout_marginBottom="25dp"
             android:text="Pad Settings" />
