--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,8 @@
     <style name="SkillCourtTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">#28a086</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/buttonGreen</item>
+        <item name="colorAccent">@color/toolbarColor</item>
 
     </style>
 
@@ -15,7 +15,7 @@
     </style>
 
     <style name="SwitchTheme" parent="Theme.AppCompat.Light">
-        <item name="colorControlActivated">@color/colorPrimaryLight</item>
+        <item name="colorControlActivated">@color/buttonGreen</item>
     </style>
 
     <style name="SkillCourtTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
