Updated fragment_create_game UI. Made it a bit nicer so it matches the colors of the rest of the application

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimary">#616774</color>
     <color name="colorButtonText">#ffffff</color>
     <color name="colorPrimaryLight">#09ab75</color>
     <color name="colorPrimaryDark">#388E3C</color>
