--- a/app/src/main/res/layout/fragment_create_game.xml
+++ b/app/src/main/res/layout/fragment_create_game.xml
@@ -23,6 +23,7 @@
 
     <EditText
         android:id="@+id/byHitsAmount"
+        android:background="@drawable/custom_edittext"
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
@@ -46,9 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:background="@color/colorPrimaryLight"
-        android:text="Play"
-        android:textColor="@color/colorPrimary"
+        android:background="@drawable/button_gradient"
+        android:text="Play Game"
+        android:textColor="@color/colorButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -64,12 +65,11 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toBottomOf="@+id/byHitsSwitch"
-        app:np_dividerColor="@color/colorPrimary"
         app:np_height="180dp"
         app:np_max="59"
         app:np_min="0"
         app:np_selectedTextColor="@color/colorPrimary"
-        app:np_textColor="@color/colorPrimaryLight"
+        app:np_textColor="@color/buttonGreen"
         app:np_width="64dp" />
 
     <com.shawnlin.numberpicker.NumberPicker
@@ -89,7 +89,7 @@
         app:np_max="59"
         app:np_min="0"
         app:np_selectedTextColor="@color/colorPrimary"
-        app:np_textColor="@color/colorPrimaryLight"
+        app:np_textColor="@color/buttonGreen"
         app:np_width="64dp" />
 
     <TextView
@@ -167,6 +167,7 @@
 
     <EditText
         android:id="@+id/padLightUpTime"
+        android:background="@drawable/custom_edittext"
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_marginBottom="16dp"
@@ -189,6 +190,7 @@
 
     <EditText
         android:id="@+id/padLightUpDelayTime"
+        android:background="@drawable/custom_edittext"
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_marginBottom="16dp"
@@ -215,11 +217,11 @@
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="6dp"
         android:gravity="center"
         android:text="Pad Light Up "
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/padLightUpTime"
+        app:layout_constraintTop_toBottomOf="@+id/padLightUpTime"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -227,7 +229,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
@@ -235,7 +237,7 @@
         android:gravity="center"
         android:text="Pad Light Delay"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/padLightUpDelayTime"
+        app:layout_constraintTop_toBottomOf="@+id/padLightUpDelayTime"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
