--- a/app/src/main/res/layout/fragment_game_mode_select.xml
+++ b/app/src/main/res/layout/fragment_game_mode_select.xml
@@ -9,17 +9,17 @@
 
     <Button
         android:id="@+id/randomGameMode"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimaryLight"
+        android:background="@drawable/home_play_color"
         android:text="Random"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -27,17 +27,17 @@
 
     <Button
         android:id="@+id/manualGameMode"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="-30dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimaryLight"
+        android:background="@drawable/home_play_color"
         android:text="Manual"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
