--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,44 +6,41 @@
     android:background="@color/background"
     tools:context=".ui.main.HomeFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <RelativeLayout
-        android:id="@+id/main_screen_area"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <Button
-            android:id="@+id/Play_Game"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/pad_settings"
-            android:background="@drawable/home_play_color"
-            android:textColor="@color/colorButtonText"
-            android:layout_centerHorizontal="true"
-            android:text="Play" />
-
-        <Button
-            android:id="@+id/pad_settings"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="@drawable/home_play_color"
-            android:textColor="@color/colorButtonText"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:text="Pad Settings" />
-
-    </RelativeLayout>
-
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <RelativeLayout
+            android:id="@+id/main_screen_area"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-        <android.support.design.widget.FloatingActionButton
+            <Button
+                android:id="@+id/playButton"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/pad_settings"
+                android:background="@drawable/home_play_color"
+                android:textColor="@color/colorButtonText"
+                android:layout_centerHorizontal="true"
+                android:text="Play" />
+
+            <Button
+                android:id="@+id/pad_settings"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@drawable/home_play_color"
+                android:textColor="@color/colorButtonText"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
+                android:text="Pad Settings" />
+
+        </RelativeLayout>
+
+
+
+        <!--<android.support.design.widget.FloatingActionButton
             android:id="@+id/playButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +52,7 @@
             android:layout_marginBottom="72dp"
             android:src="@drawable/ic_play"
             app:backgroundTint="@color/colorPrimaryLight"
-            app:elevation="0dp" />
+            app:elevation="0dp" />-->
     </android.support.design.widget.CoordinatorLayout>
 
 </FrameLayout>
