--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="SkillCourtTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/buttonGreen</item>
+        <item name="colorPrimaryDark">@color/toolbarColor</item>
         <item name="colorAccent">@color/toolbarColor</item>
 
     </style>
