--- a/app/src/main/res/layout/fragment_start_game.xml
+++ b/app/src/main/res/layout/fragment_start_game.xml
@@ -114,8 +114,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="0"
-        android:textColor="@color/colorCenter"
-        android:textSize="18sp"
+        android:background="@drawable/custom_hittext"
+        android:textColor="@color/buttonGreen"
+        android:textSize="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline15"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,8 +134,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="0"
+        android:background="@drawable/custom_hittext"
         android:textColor="@android:color/holo_red_light"
-        android:textSize="18sp"
+        android:textSize="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline15"
@@ -153,7 +155,8 @@
         android:layout_marginTop="16dp"
         android:text="0"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:background="@drawable/custom_hittext"
+        android:textSize="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
