--- a/app/src/main/res/layout/fragment_game_over.xml
+++ b/app/src/main/res/layout/fragment_game_over.xml
@@ -17,8 +17,7 @@
         android:text="Hits"
         android:textAlignment="center"
         android:textColor="?attr/colorPrimary"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/game_over_score"
@@ -33,8 +32,7 @@
         android:text="Score"
         android:textAlignment="center"
         android:textColor="?attr/colorPrimary"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textSize="18sp" />
 
     <at.grabner.circleprogress.CircleProgressView
         android:id="@+id/game_over_progress"
@@ -43,19 +41,19 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         CircleProgressView:cpv_autoTextSize="true"
-        CircleProgressView:cpv_barColor="@color/colorPrimaryDark"
-        CircleProgressView:cpv_barWidth="35dp"
+        CircleProgressView:cpv_barColor="@color/buttonGreen"
+        CircleProgressView:cpv_barWidth="6dp"
         CircleProgressView:cpv_innerContourSize="0dp"
         CircleProgressView:cpv_maxValue="100"
         CircleProgressView:cpv_outerContourSize="0dp"
         CircleProgressView:cpv_rimColor="#B3B3B3"
-        CircleProgressView:cpv_rimWidth="35dp"
+        CircleProgressView:cpv_rimWidth="6dp"
         CircleProgressView:cpv_seekMode="false"
         CircleProgressView:cpv_showUnit="true"
-        CircleProgressView:cpv_spinColor="@color/colorPrimaryDark"
-        CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
+        CircleProgressView:cpv_spinColor="@color/buttonGreen"
+        CircleProgressView:cpv_textColor="@color/buttonGreen"
         CircleProgressView:cpv_unit="%"
-        CircleProgressView:cpv_unitColor="@color/colorPrimaryDark"
+        CircleProgressView:cpv_unitColor="@color/buttonGreen"
         CircleProgressView:cpv_unitPosition="right_top"
         CircleProgressView:cpv_unitToTextScale="1"
         CircleProgressView:cpv_value="0" />
@@ -67,11 +65,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/blue_circular_button"
+        android:background="@drawable/home_play_color"
         android:text="Play Again"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold" />
+        android:textColor="@color/colorButtonText" />
 
     <Button
         android:id="@+id/game_over_home_btn"
@@ -83,11 +80,10 @@
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/green_circular_button"
+        android:background="@drawable/home_play_color"
         android:text="Home"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold" />
+        android:textColor="@color/colorButtonText" />
 
     <Button
         android:id="@+id/game_over_new_game_btn"
@@ -99,11 +95,11 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/orange_circular_button"
+        android:background="@drawable/home_play_color"
         android:text="New Game"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold" />
+        android:textColor="@color/colorButtonText" />
+
 
     <TextView
         android:id="@+id/game_over_mode"
@@ -118,9 +114,8 @@
         android:gravity="center"
         android:text="SEQUENCE"
         android:textAlignment="center"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        android:textColor="#f20707"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/game_over_time"
@@ -135,7 +130,6 @@
         android:text="0:00"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="35sp" />
 
 </RelativeLayout>
