--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#616774</color>
+    <color name="colorPrimary">#16191f</color>
     <color name="colorButtonText">#ffffff</color>
     <color name="colorPrimaryLight">#09ab75</color>
     <color name="colorPrimaryDark">#388E3C</color>
