--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -6,16 +6,92 @@
     android:background="@color/background"
     tools:context=".ui.main.StatsFragment">
 
-
-    <TextView
-        android:id="@+id/userStatsData"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/linearlayout_stats_bg"
+        android:animateLayoutChanges="true"
+        android:orientation="horizontal"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/dataListView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:weightSum="100">
+
+        <TextView
+            android:layout_width="12dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimary"
+            android:text="ID"
+            android:layout_weight="12"/>
+
+        <TextView
+            android:layout_width="22dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimary"
+            android:text="Date"
+            android:layout_weight="22"/>
+
+        <TextView
+            android:layout_width="22dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimary"
+            android:text="Game Time"
+            android:layout_weight="22"/>
+
+        <TextView
+            android:layout_width="22dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/colorPrimary"
+            android:text="Score"
+            android:layout_weight="22"/>
+
+        <TextView
+            android:layout_width="22dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/colorPrimary"
+            android:text="Hits"
+            android:layout_weight="22"/>
+
+    </LinearLayout>
+
+
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/dataListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:dividerHeight="3dp"
+        android:divider="@color/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
 
 </android.support.constraint.ConstraintLayout>
