Was able to merge player table with session tables

--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -52,7 +52,7 @@
 
     <TextView
         android:id="@+id/scoreTextView"
-        android:layout_width="22dp"
+        android:layout_width="10dp"
         android:textAlignment="center"
         android:gravity="center"
         android:layout_height="wrap_content"
@@ -61,10 +61,22 @@
         android:textSize="16sp"
         android:textColor="@color/colorPrimary"
         android:text="4"
-        android:layout_weight="22"/>
+        android:layout_weight="10"/>
 
     <TextView
         android:id="@+id/hitTextView"
+        android:layout_width="10dp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorPrimary"
+        android:text="5"
+        android:layout_weight="10"/>
+    <TextView
+        android:id="@+id/sessionPlayerIDTextView"
         android:layout_width="22dp"
         android:textAlignment="center"
         android:gravity="center"
