--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -1,92 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-    android:weightSum="100"
-    android:background="@drawable/listview_background">
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    android:background="@drawable/listview_p_background">
 
-    <!--Layout_weight must sum up to 99.9 for equal distance between TextViews-->
-    <TextView
-        android:id="@+id/idTextView"
-        android:layout_width="12dp"
-        android:textAlignment="center"
-        android:gravity="center"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
+        android:animateLayoutChanges="true"
+        android:weightSum="100">
+
+        <!--Layout_weight must sum up to 99.9 for equal distance between TextViews-->
+        <TextView
+            android:id="@+id/idTextView"
+            android:layout_width="12dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="1"
+            android:layout_weight="12"/>
+
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="22dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="2"
+            android:layout_weight="22"/>
+
+        <TextView
+            android:id="@+id/gTimeTextView"
+            android:layout_width="22dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="3"
+            android:layout_weight="22"/>
+
+        <TextView
+            android:id="@+id/scoreTextView"
+            android:layout_width="10dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="4"
+            android:layout_weight="10"/>
+
+        <TextView
+            android:id="@+id/hitTextView"
+            android:layout_width="10dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="5"
+            android:layout_weight="10"/>
+        <TextView
+            android:id="@+id/sessionPlayerIDTextView"
+            android:layout_width="22dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="6"
+            android:layout_weight="22"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/noteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         android:textSize="16sp"
         android:textColor="@color/colorPrimary"
-        android:text="1"
-        android:layout_weight="12"/>
-
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="22dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimary"
-        android:text="2"
-        android:layout_weight="22"/>
-
-    <TextView
-        android:id="@+id/gTimeTextView"
-        android:layout_width="22dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimary"
-        android:text="3"
-        android:layout_weight="22"/>
-
-    <TextView
-        android:id="@+id/scoreTextView"
-        android:layout_width="10dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimary"
-        android:text="4"
-        android:layout_weight="10"/>
-
-    <TextView
-        android:id="@+id/hitTextView"
-        android:layout_width="10dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimary"
-        android:text="5"
-        android:layout_weight="10"/>
-    <TextView
-        android:id="@+id/sessionPlayerIDTextView"
-        android:layout_width="22dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimary"
-        android:text="5"
-        android:layout_weight="22"/>
-
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe" />
 
 </LinearLayout>
