--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -10,7 +10,6 @@
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
         android:layout_marginBottom="8dp"
         android:background="@drawable/linearlayout_stats_bg"
         android:animateLayoutChanges="true"
@@ -44,8 +43,6 @@
             android:textColor="@color/colorPrimary"
             android:text="Date"
             android:layout_weight="49"/>
-
-
     </LinearLayout>
 
 
@@ -54,6 +51,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/linearLayout2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
